--- a/provisioning/roles/jupyterhub/tasks/main.yml
+++ b/provisioning/roles/jupyterhub/tasks/main.yml
@@ -64,6 +64,14 @@
 - name: install jupyter, jupyterhub, sudospawner via pip3
   pip: executable=/usr/local/bin/pip3 requirements="/root/jupyterhub_requirements.txt" extra_args='--upgrade'
 
+- name: install jupyterlab
+  pip: executable=/usr/local/bin/pip3 name=jupyterlab
+  when: install_jupyterlab==True
+
+- name: register jupyterlab
+  command: jupyter serverextension enable --py jupyterlab --sys-prefix
+  when: install_jupyterlab==True
+
 - name: Check to see if config file exists
   stat: path=/etc/jupyterhub/jupyterhub_config.py
   register: config_exists
@@ -86,6 +94,18 @@
 
 - name: (PAM) set sessions policy
   lineinfile: dest=/etc/jupyterhub/jupyterhub_config.py line="c.PAMAuthenticator.open_sessions = False"
+
+- name: configure jupyterlab
+  lineinfile: dest=/etc/jupyterhub/jupyterhub_config.py line="c.Spawner.cmd = ['jupyterhub-singleuser']"
+  when: install_jupyterlab==True
+
+- name: configure jupyterlab
+  lineinfile: dest=/etc/jupyterhub/jupyterhub_config.py line="c.Spawner.args = ['lab']"
+  when: install_jupyterlab==True
+
+- name: configure jupyterlab
+  lineinfile: dest=/etc/jupyterhub/jupyterhub_config.py line="c.Spawner.default_url = '/lab'"
+  when: install_jupyterlab==True
 
 ## SSL certificates
 - name: Check to see if certificate exists
@@ -129,7 +149,7 @@
   with_items: "{{gen_test_username}}"
   when: generate_testusers == True
 
-
-
-
-
+- name: add lab directory
+  file: path=/home/{{item}}/lab state=directory mode=0755 owner={{item}} group=jupyter
+  with_items: "{{gen_test_username}}"
+  when: (generate_testusers == True) and (install_jupyterlab == True)
