java added as a submodule

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -3,13 +3,23 @@
 
 - name: Provisioning Jupyterhub
   hosts: 
-    - datalab
+     - datalab
+  vars:
+     #Java variables
+     java_version: 8
+     #java_subversion: 121
+     java_set_javahome: true
 
   roles:
+    - role: ansible-oracle-java
     - docker
     - role: python 
       pyfsrc_version: 3.5.2
       pyfsrc_make_default: yes
+      
+ 
+    
+#    - role: rstudioServer
     - role: jupyterhub
       install_jupyterlab: True
       generate_testusers: True
